--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About me - Whitney Breen</title>
+        <title>About - Whitney Breen</title>
 
         <!-- Meta -->
         <meta name="description" content="My first webpage">
@@ -18,9 +18,9 @@
         <div id="container">
             <div class="navbar">
                 <ul class="nav">
-                    <li><a href="#" class="about">About</a></li>
-                    <li><a href="#" class="home">Home</a></li>
-                    <li><a href="#" class="Hobbies">Hobbies</a></li>                                  
+                    <li><a href="bio.html" class="about">About</a></li>
+                    <li><a href="Landing.html" class="home">Home</a></li>
+                    <li><a href="hobbies.html" class="Hobbies">Hobbies</a></li>                                  
                 </ul>
             </div>
             <h1>About Whitney</h1>
