--- a/bio.html
+++ b/bio.html
@@ -18,16 +18,16 @@
         <div id="container">
             <div class="navbar">
                 <ul class="nav">
-                    <li><a href="bio.html" class="about">About</a></li>
                     <li><a href="Landing.html" class="home">Home</a></li>
-                    <li><a href="hobbies.html" class="Hobbies">Hobbies</a></li>                                  
+                    <li><a href="bio.html" class="about">About</a></li>                    
+                    <li><a href="hobbies.html" class="hobbies">Hobbies</a></li>                                    
                 </ul>
             </div>
             <h1>About Whitney</h1>
             
             <div class="section">
                 <div id="photo">
-                    <img src="images/portrait2.jpg" alt="" id="portrait">
+                    <img src="images/portrait2.jpg" alt="Enjoying breakfast in the beautiful outdoors of South Africa." id="portrait">
                 </div>
                 <div class="paragraph">
                 <p class=>Whitney Breen is an established co-owner and secretary of Cornerstone Construction Services. The company, being owned and ran by Whitney and her husband, offers customers two main types of service: commercial & residential remodeling and construction as well as chimney inspection and cleaning services. Whitney's responsibilities consists of coordinating and scheduling new clients for the chimney business while accounting for billing to the customers. 
@@ -37,13 +37,13 @@
                 <p>Whitney has been driven since a young age by starting a nanny service at 16 years old. In her early twenties she worked as a whole-sale buyer for a family-owned pharmacy, gaining five years of experience in customer service. Her life was transformed when she met her now husband, Bobby, as they have been building their business together ever since. Whitney claims her work ethic and motivation for a better life stems from a frugal upbringing.
                 </p>
                 <p>Whitney’s hard work doesn’t stop there. Her passion for homes and adoration for interior design has sparked a new challenge on the horizon. In February, she is beginning classes to acquire a real-estate license. Whitney plans to see herself in the next few years as an established and respected real-estate agent while providing more financial stability for her family.</p>
-                <p>When she’s not working, Whitney can be found spending quality time, preferably outdoors, with her husband and two dogs. She is an avid traveler always looking to immerse herself in new cultures, scenery’s, people groups, fashion, historical landmarks, music, and cuisines. A favorite travel destination of hers is Cape Town, South Africa, accrediting it for its beautiful clear blue water, gorgeous views, and opportunity for endless exploration.</p>
+                <p>When she’s not working, Whitney can be found spending quality time, preferably outdoors, with her husband and two dogs. She is an avid traveler always looking to immerse herself in new cultures, sceneries, people groups, fashion, historical landmarks, music, and cuisines. A favorite travel destination of hers is Cape Town, South Africa, accrediting it for its beautiful clear blue water, gorgeous views, and opportunity for endless exploration.</p>
                 </div>
             </div>    
         </div>
         <footer>
             <div class="top-div">
-                <a href="#container" class="top">Top of Page</a>
+                <a href="#container" alt="takes user to top of web page" class="top">Top of Page</a>
             </div>
         </footer>
 
